# spire-csda

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: python.yml  test.yml
examples/: advanced.py  simple.py
nasa_csda/: cli.py  client.py  config.py
spire_csda/: buffer.py  cli.py  client.py  config.py  streaming.py  transport.py
spire_csda/models/: bulk_download.py  item_collection.py  search.py
tests/: base_item_collection.json  conftest.py  test_buffer.py  test_client.py  test_stream.py
